{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 156,
  "lineage": "e9d6de7b-fbd8-13bc-98f3-00ad7664b0b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-098ba4467a1816233",
            "domain": "vpc",
            "id": "eipalloc-0c458f1d2e12add75",
            "instance": "i-01cc23444a1687488",
            "network_interface": "eni-0b7b92cfd6497eeb1",
            "private_dns": "ip-10-0-0-252.eu-west-2.compute.internal",
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-18-130-120-158.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.120.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.webserver",
            "aws_security_group.webservers",
            "aws_subnet.eu-west-2-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eab3a90fc693af19",
            "arn": "arn:aws:ec2:eu-west-2:661782073060:instance/i-01cc23444a1687488",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01cc23444a1687488",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7b92cfd6497eeb1",
            "private_dns": "ip-10-0-0-252.eu-west-2.compute.internal",
            "private_ip": "10.0.0.252",
            "public_dns": "ec2-18-130-120-158.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.120.158",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0799fe4df7e2c8676",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09bdd0b6ce606fa83",
            "tags": {
              "Name": "jakepwalker.io",
              "type": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03308a6be36b53c75"
            ]
          },
          "dependencies": [
            "aws_security_group.webservers",
            "aws_subnet.eu-west-2-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b73ae997d5f9bf6f",
            "owner_id": "661782073060",
            "vpc_id": "vpc-0e05c0b6cc015bfd7"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eu-west-2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09aa5636a1729caee",
            "owner_id": "661782073060",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b73ae997d5f9bf6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "vpc_id": "vpc-0e05c0b6cc015bfd7"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eu-west-2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048ec2ce56614e087",
            "route_table_id": "rtb-09aa5636a1729caee",
            "subnet_id": "subnet-09bdd0b6ce606fa83"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.eu-west-2-public",
            "aws_subnet.eu-west-2-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:661782073060:security-group/sg-03308a6be36b53c75",
            "description": "Allow traffic to communicate with webservers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03308a6be36b53c75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public ping availability",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "185.108.171.235/32"
                ],
                "description": "SSH access from private IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webservers",
            "name_prefix": null,
            "owner_id": "661782073060",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Facing Webservers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e05c0b6cc015bfd7"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eu-west-2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:661782073060:subnet/subnet-09bdd0b6ce606fa83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-09bdd0b6ce606fa83",
            "map_public_ip_on_launch": false,
            "owner_id": "661782073060",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0e05c0b6cc015bfd7"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:661782073060:vpc/vpc-0e05c0b6cc015bfd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f26abf4efafddb4",
            "default_route_table_id": "rtb-0ed9b6c13cfb6a7ac",
            "default_security_group_id": "sg-040554f46780ec553",
            "dhcp_options_id": "dopt-35db8f5d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e05c0b6cc015bfd7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed9b6c13cfb6a7ac",
            "owner_id": "661782073060",
            "tags": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}